<resources>
    <string name="app_name">Yay Pay Bar</string>
    <string name="action_settings">Settings</string>

    <!-- left menu -->
    <string name="left_menu_your_friend_list">Your friend list</string>
    <string name="left_menu_share_your_profile">Your friend list that you share your profile</string>
    <string name="yaypaypar">yaypaypar</string>

    <string name="category">Category</string>

    <string name="lbl_logout">Logout</string>
    <string name="lbl_register">Register</string>
    <string name="lbl_login">Login</string>

    <string name="lbl_login_action">Login</string>
    <string name="lbl_title">Yae Pyay Par</string>

    <string name="lbl_recover_password"><![CDATA[<u>Password ေမ့သြားလိုု့လား</u>]]></string>
    <string name="lbl_navigate_to_register"><![CDATA[<u>Register မလုုပ္ရေသးပါက ျပဳလုုပ္ရန္</u>]]></string>

    <string name="msg_enter_name">မိတ္ေဆြရဲ့ အမည္</string>
    <string name="msg_enter_email">မိတ္ေဆြရဲ့ email</string>
    <string name="msg_enter_password">မိတ္ေဆြရဲ့ Password</string>
    <string name="msg_enter_password_register">Password တစ္ခုု သတ္မွတ္ေပးပါ</string>
    <string name="msg_date_of_birth">မိတ္ေဆြ ရဲ့ ေမြးေန့</string>
    <string name="msg_select_your_current_residing_country">မိတ္ေဆြ လက္ရွိေနထိုုင္ေသာ Country အား ေရြးခ်ယ္ပါ</string>
    <string name="lbl_register_action">Register</string>

    <string name="error_missing_name">Need to enter your name</string>
    <string name="error_missing_email">Need to enter your email address</string>
    <string name="error_missing_password">Need to put a password for Gita App</string>
    <string name="error_missing_date_of_birth">Need to select your date of birth.</string>
    <string name="error_email_is_not_valid">Your email doesn\'t seem valid. Please check.</string>

    <string name="error_missing_email_login">Need to enter the email address you used to register.</string>
    <string name="error_missing_password_login">Need to enter the password.</string>
    <string name="confirm_no">NO</string>
    <string name="confirm_yes">YES</string>
    <string name="confirm_ok">OK</string>
    <string name="msg_welcome_returning_user">Welcome from YaePyayPar</string>
    <string name="msg_welcome_new_user">Welcome new user</string>

    <string name="msg_confirm_logout">YaePyayPar Mobile App မွ Logout ျပဳလုုပ္ရန္ ေသခ်ာပါသလား</string>

    <string-array name="current_residing_country">
        <item>Myanmar</item>
        <item>Malaysia</item>
        <item>Singapore</item>
        <item>Thailand</item>
        <item>Japan</item>
        <item>Korea, Republic of</item>
        <item>Qatar</item>
        <item>United Arab Emirates</item>
        <item>United States</item>
    </string-array>


    <!-- dummy friends name-->
    <string-array name="dummy_friends_name">
        <item>John</item>
        <item>Teller</item>
        <item>Kity</item>
        <item>Bo Bo</item>
        <item>Mi Su</item>
        <item>Aung Lin</item>
        <item>Smith</item>
        <item>Taylor</item>
        <item>Royal</item>
        <item>Mg Mg</item>
    </string-array>
</resources>
