<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/margin_large"
    android:orientation="vertical"
    android:background="@drawable/bg_rounded"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/lbl_Register_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:drawablePadding="@dimen/margin_medium"
        android:fontFamily="sans-serif-condensed"
        android:padding="@dimen/margin_medium_2"
        android:textColor="@color/accent_title_text"
        android:text="@string/lbl_title"
        android:textSize="@dimen/text_heading_2x"/>

    <ImageView
        android:id="@+id/iv_register_with_facebook"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:clickable="true"
        android:src="@drawable/register_with_facebook_large" />

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="@dimen/user_profile_image_size"
        android:layout_height="@dimen/user_profile_image_size"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:elevation="4dp"
        android:visibility="gone"
        android:src="@drawable/dummy_avatar" />

    <com.padc.yaepyaypar.components.MMEditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/iv_profile"
        android:layout_toRightOf="@id/iv_profile"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginRight="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium"
        android:backgroundTint="?attr/colorAccent"
        android:hint="@string/msg_enter_name"
        android:singleLine="true"
        android:textColorHint="@color/secondary_text"
        android:textSize="@dimen/text_regular_2x">

        <requestFocus />

    </com.padc.yaepyaypar.components.MMEditText>

    <com.padc.yaepyaypar.components.MMEditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginRight="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium"
        android:backgroundTint="?attr/colorAccent"
        android:hint="@string/msg_enter_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        android:textColorHint="@color/secondary_text"
        android:textSize="@dimen/text_regular_2x" />

    <com.padc.yaepyaypar.components.MMEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginRight="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium"
        android:backgroundTint="?attr/colorAccent"
        android:drawablePadding="@dimen/margin_medium"
        android:drawableRight="@drawable/ic_visibility_24dp"
        android:hint="@string/msg_enter_password_register"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:textColorHint="@color/secondary_text"
        android:textSize="@dimen/text_regular_2x" />

    <com.padc.yaepyaypar.components.MMEditText
        android:id="@+id/tv_date_of_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginRight="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:background="@drawable/bg_rounded"
        android:editable="false"
        android:hint="@string/msg_date_of_birth"
        android:maxLines="1"
        android:padding="@dimen/margin_medium"
        android:singleLine="true"
        android:textColor="@color/black_full"
        android:textColorHint="@color/secondary_text"
        android:textSize="@dimen/text_regular_2x" />

    <com.padc.yaepyaypar.components.MMTextView
        android:id="@+id/lbl_current_residing_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_spinner_label"
        android:layout_marginRight="@dimen/margin_spinner_label"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:text="@string/msg_select_your_current_residing_country"
        android:textColor="@color/secondary_text" />

    <Spinner
        android:id="@+id/sp_country_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium" />

    <Button
        android:id="@+id/btn_register"
        style="@style/AccentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:text="@string/lbl_register_action" />

</LinearLayout>